# BottleBats

./: .gitignore  CMakeLists.txt  ElevatorBots.md  Process.h  Process_Base.cpp  Process_Unix.cpp  Process_Windows.cpp  TODO.md  main.cpp
.github/workflows/: build-test.yml
bots-scripts/cpp/: Dockerfile  build.sh
bots-scripts/cs/: Dockerfile  build.sh
bots-scripts/java/: Dockerfile  build.sh
bots-scripts/py/: Dockerfile  build.sh
bots-scripts/rs/: Dockerfile  build.sh
examples/: .gitignore  JaVijf.java  vijfbot.cpp
examples/cpp/: Dockerfile  vijfbot.cpp
examples/cs/: Dockerfile  Lib.cs  Program.cs
examples/java/: .dockerignore  Dockerfile  Floor.java  JaVijf.java
examples/python/: Dockerfile  base.py  cycle.py  not_self_random_travel.py  random_travel.py  run.py
examples/rust/: Dockerfile  external.rs  main.rs
examples/zig/: Dockerfile  main.zig
games/: CMakeLists.txt
games/elevated/: Building.cpp  Building.h  Elevator.cpp  Elevator.h  Simulation.cpp  Simulation.h  Simulator.h  Types.cpp  Types.h  elevated-algorithm-tester.cpp
games/elevated/algorithm/: Algorithm.cpp  Algorithm.h  CyclingAlgorithm.cpp  CyclingAlgorithm.h  ProcessAlgorithm.cpp  ProcessAlgorithm.h  ProcessPlayer.cpp  ProcessPlayer.h
games/elevated/generation/: BasicGenerator.cpp  BasicGenerator.h  FullGenerators.cpp  FullGenerators.h  Generation.cpp  Generation.h  GenerationFactory.cpp  GenerationFactory.h  MetaGenerators.cpp  MetaGenerators.h
games/elevated/generation/building/: SplitBuildingGenerators.cpp  SplitBuildingGenerators.h
games/elevated/generation/factory/: FactoryFactory.cpp  FactoryFactory.h  GeneratorSettings.cpp  GeneratorSettings.h  NamedScenarios.cpp  NamedScenarios.h  OutputSettings.cpp  OutputSettings.h  StringSettings.cpp  StringSettings.h
games/elevated/stats/: ElevatorStatsListener.cpp  ElevatorStatsListener.h  Listener.cpp  Listener.h  MetaListener.cpp  MetaListener.h  PassengerStats.cpp  PassengerStats.h  PowerStatsListener.cpp  PowerStatsListener.h  QueueStatsListener.cpp  QueueStatsListener.h  ReplayListener.cpp  ReplayListener.h  SpecialEventsListener.cpp  SpecialEventsListener.h
games/elevated/test/: StoringAlgorithm.h  StoringEventListener.h  building-test.cpp  elevator-test.cpp  event-test.cpp  gen-test.cpp  info-test.cpp  protocol-test.cpp  simulator-test.cpp
games/vijf/: Cards.cpp  Cards.h  Game.cpp  Game.h  Vijf.cpp  Vijf.h  main.cpp  vijf-test.cpp
games/vijf/players/: BasicPlayers.cpp  BasicPlayers.h  ProcessPlayer.cpp  ProcessPlayer.h  VijfPlayer.cpp  VijfPlayer.h
gui/: CMakeLists.txt  Config.cpp  Config.h  DirWatcher.cpp  DirWatcher.h  VisualGeneratorSettings.cpp  VisualGeneratorSettings.h  Visualizer.cpp  Visualizer.h  fonts.h  logo.h  main.cpp
gui/ImGui/: ImGuiExtensions.cpp  ImGuiExtensions.h  ImGuiSFMLExtensions.h  ImPlotExtensions.h
gui/elevated/: TimePlottable.cpp  TimePlottable.h  VisualGeneratorSettings.cpp
server/: BasicServer.cpp  BasicServer.h  BotCreator.cpp  BotCreator.h  CMakeLists.txt  ContainerBuilder.cpp  ContainerBuilder.h  GamePlayer.cpp  GamePlayer.h  crowtest.cpp  full-server.cpp  runsomegames.cpp  vijf-server.cpp
server/auth/: Authenticator.cpp  Authenticator.h  BasicServer.cpp  BasicServer.h
server/database/: ConnectionPool.cpp  ConnectionPool.h  User.cpp  User.h
server/elevated/: BotCreator.cpp  BotCreator.h  Endpoints.cpp  Endpoints.h  Runner.cpp  Runner.h
server/games/: InteractiveGame.cpp  InteractiveGame.h  MultiplayerGame.h  NamedEnum.h  PlayerFactoryHelper.h  StringChannel.cpp  StringChannel.h
server/games/simple/: Connect4.cpp  Connect4.h  GuessGame.cpp  GuessGame.h  TickTackToe.cpp  TickTackToe.h
server/vijf/: BotCreator.cpp  BotCreator.h  EndPoints.cpp  EndPoints.h  GamePlayer.cpp  runsomegames.cpp
site/: README.md  index.html  package.json  vite.config.ts
site/public/examples/: example.cpp  example.java  example.py
site/src/: App.vue  http.ts  main.ts
site/src/components/: BotCreator.vue  IconMaker.vue  Leaderboard.vue  LogoSVG.vue  NavBar.vue  NavBarButton.vue  Spinner.vue
site/src/components/elevated/: BotInfo.vue  PoopOrCrown.vue  SortingIndicator.vue
site/src/components/games/: Card.vue  VijfGame.vue
site/src/components/vijf/: BotItem.vue  Card.vue  VijfGame.vue  VijfLeaderboardItem.vue
site/src/games/: Connect4Game.vue  Console.vue  GuessGame.vue  InteractiveGame.vue  TickTackToeGame.vue
site/src/router/: index.ts
site/src/views/: AccountView.vue  BotView.vue  Console.vue  ExplainView.vue  GameView.vue  InteractiveGame.vue
site/src/views/elevated/: BotView.vue  ExplainView.vue  LeaderboardView.vue  data.json
site/src/views/leaderboard/: LeaderboardAll.vue  data.js
site/src/views/vijf/: BotView.vue  ExplainView.vue  VijfView.vue
util/: Assertions.h  Deferred.h  FileWatcher.h  FileWatcher_Base.cpp  FileWatcher_Unix.cpp  FileWatcher_Windows.cpp  Histogram.h  Process.h  Process_Base.cpp  Process_Unix.cpp  Process_Windows.cpp
